@@ -1,3 +1,4 @@
+* Display binary size alongside the buttons in treeview
 * Set correctly the focus on tab switching
 * Add shortcut to focus search entry
 * Add binary field to tree views
